# primes_visualisation

./: .gitignore  README.md
.github/workflows/: deploy.yml
rust-primes/: Cargo.toml
rust-primes/src/: lib.rs
web-app/: index.html  package-lock.json  package.json  vite.config.ts
web-app/src/: main.ts
web-app/src/utils/: colors.ts  primeGenerator.ts
web-app/src/visualizations/: BaseVisualization.ts  ModularGrid.ts  PolarSpiral.ts  PrimeGaps.ts  SacksSpiral.ts  Spherical3D.ts  UlamSpiral.ts  index.ts
