[package]
name = "prime-wasm"
version = "0.1.0"
edition = "2021"
description = "High-performance prime number generation for WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Use console_error_panic_hook for better error messages in debug
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true

[features]
default = ["console_error_panic_hook"]

